test/fixtures/fixtures/type-error/voidUnion.lys.ast.desugar
|-Document(0,131)
  |-(AstCons)
    |-(AstCons)
      |-FunctionDirective(0,29)
        |-(AstCons)
          |-Decorators(0,0)
            <Rule0>
          |-(AstCons)
            |-NoModifier(0,0)
              <Rule0>
            |-FunDeclaration(0,29)
              |-(AstCons)
                |-NameIdentifier(4,5)
                  |-Identifier=y
                |-(AstCons)
                  |-TypeParameters(5,5)
                    <Rule0>
                  |-(AstCons)
                    |-FunctionParamsList(5,7)
                      |-(List)(6,6)
                        <Rule0>
                    |-(AstCons)
                      |-ReturnType(7,14)
                        |-Reference(9,13)
                          |-QName(9,13)
                            |-NameIdentifier(9,13)
                              |-Identifier=void
                      |-FunctionBody(14,29)
                        |-CodeBlock(16,29)
                          <Rule0>
      |-FunctionDirective(31,131)
        |-(AstCons)
          |-Decorators(31,31)
            <Rule0>
          |-(AstCons)
            |-NoModifier(31,31)
              <Rule0>
            |-FunDeclaration(31,131)
              |-(AstCons)
                |-NameIdentifier(35,36)
                  |-Identifier=x
                |-(AstCons)
                  |-TypeParameters(36,36)
                    <Rule0>
                  |-(AstCons)
                    |-FunctionParamsList(36,44)
                      |-(List)(37,43)
                        |-Parameter(37,43)
                          |-(AstCons)
                            |-NameIdentifier(37,38)
                              |-Identifier=a
                            |-Reference(40,43)
                              |-QName(40,43)
                                |-NameIdentifier(40,43)
                                  |-Identifier=i32
                    |-(AstCons)
                      |-ReturnType(44,50)
                        |-Reference(46,49)
                          |-QName(46,49)
                            |-NameIdentifier(46,49)
                              |-Identifier=i32
                      |-FunctionBody(50,131)
                        |-CodeBlock(52,131)
                          |-(AstCons)
                            |-VarDeclaration(56,125)
                              |-(AstCons)
                                |-NameIdentifier(60,61)
                                  |-Identifier=z
                                |-MatchExpression(64,125)
                                  |-(AstCons)
                                    |-Reference(70,71)
                                      |-QName(70,71)
                                        |-NameIdentifier(70,71)
                                          |-Identifier=a
                                    |-MatchBody(72,125)
                                      |-(AstCons)
                                        |-(AstCons)
                                          |-CaseLiteral(78,89)
                                            |-(AstCons)
                                              |-Literal(83,84)
                                                |-NumberLiteral=1
                                              |-NumberLiteral=1
                                          |-CaseLiteral(94,107)
                                            |-(AstCons)
                                              |-Literal(99,100)
                                                |-NumberLiteral=2
                                              |-AtomicExpression(104,107)
                                                |-(AstCons)
                                                  |-Reference(104,105)
                                                    |-QName(104,105)
                                                      |-NameIdentifier(104,105)
                                                        |-Identifier=y
                                                  |-CallArguments(105,107)
                                                    <Rule0>
                                        |-CaseElse(112,121)
                                          |-(AstCons)
                                            |-DeclaredName(117,117)
                                              <Rule0>
                                            |-NumberLiteral=3
                            |-Reference(128,129)
                              |-QName(128,129)
                                |-NameIdentifier(128,129)
                                  |-Identifier=z
    |-EndOfFile=